--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-image: url(../img/banner.jpg);
+    background-image: url(img/20241009_093147.jpg);
     background-size: cover;
     background-position: 50% 50%;
     height: 96vh;
@@ -248,6 +248,105 @@ section {
     margin: 1rem auto;
 }
 
+.valor div {
+    display: flex;
+    justify-content: start;
+    align-items: end;
+}
 
+.valor span {
+    text-decoration: line-through;
+    font-size: 0.8rem;
+    color: var(--cor-3);
+    margin-left: 0.5rem;
+}
 
+.card-btn {
+    text-align: right;
+}
 
+/* avalição */
+.avaliacoes {
+    text-align: center;
+    width: 75px;
+    min-width: 50vh;
+    margin: 1rem auto;
+    padding: 6rem 3rem 2rem;
+    
+    border: solid 1px green;
+}
+
+.avaliacoes h1 {
+    font-family: var(--fonte-secundaria);
+    color: var(--cor-principal);
+}
+
+.avaliacoes p {
+    margin: 1rem auto;
+    color: var(--cor-3);
+}
+
+.avaliacoes img {
+    border: solid 0.2rem var(--cor-destaque);
+    border-radius: 50%;
+    background-color: var(--cor-destaque);
+    outline: none;
+    width: 10rem;
+}
+
+.avaliacoes span {
+    font-weight: 700;
+}
+
+.carrossel {
+    position: relative;
+    padding: 0 5rem;
+    margin: auto;
+}
+
+.carrossel button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: var(--cor-5);
+    cursor: pointer;
+    padding: 0.5rem;
+    transition: 0.3s;
+}
+
+.carrossel button:hover {
+    background-color: var(--cor-3);
+}
+
+.anterior {
+    left: 0;
+}
+
+.proximo {
+    right: 0;
+}
+
+/* rodapé*/
+footer {
+    background-color: var(--cor-4);
+    color: var(--cor-2);
+    padding: 2rem 5rem;
+    display: flex;
+    font-size: 0.8rem;
+}
+
+footer div {
+    flex: 1;
+    padding: 0 0.3rem;
+}
+
+footer h3{
+    margin-bottom: 1rem;
+    text-transform: uppercase;
+}
+
+footer .input-group {
+    display: flex;
+    gap: 0.5rem;
+    margin: 1rem 0 15rem;
+}
