--- a/style.css
+++ b/style.css
@@ -350,3 +350,93 @@ footer .input-group {
     gap: 0.5rem;
     margin: 1rem 0 15rem;
 }
+
+footer input {
+    background-color: var(--cor-01);
+    color: var(--cor-4);
+    letter-spacing: 0.1rem;
+    padding: 0.5rem;
+    border: none;
+    border-radius: 0.1rem;
+    width: 100%;
+}
+
+footer button {
+    padding: 0.3rem 1.4rem;
+    border-radius: 0.3rem;
+}
+
+footer hr {
+    margin: 1rem 0;
+}
+
+.empresa p {
+    margin: 2rem 0;
+}
+
+.empresa span {
+    font-weight: 700;
+    display: block;
+}
+
+.rede-social i {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 2rem;
+    height: 2rem;
+    font-size: 1.2;
+    border: solid 0.15rem;
+    border-radius: 50%;
+    cursor: pointer;
+    position: 0.3s;
+}
+
+.rede-social i:hover {
+    color: var(--cor-destaque);
+    border-color: var(--cor-destaque);
+}
+
+.rodape {
+    width: 100%;
+    height: 3rem;
+    background-color: var(--cor-principal);
+}
+
+/* media queries */
+
+/* navbar */
+
+/* extra small: smartphone (retrato) */
+@media (min-width: 0px) {
+
+    nav {
+        padding: 0;
+        padding-left: 1rem;
+        background-color: var(--cor-principal);
+    }
+
+    .menu {
+        display: none;
+    }
+
+    /* head */
+    .titulo {
+        font-size: 1.8rem;
+    }
+
+    .booking {
+        padding: 0.8rem;
+    }
+
+    .booking form {
+        flex-direction: column;
+    }
+
+    .form input {
+        width: 100%;
+        margin-bottom: 0.6rem;
+    }
+
+    
+}
