--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ section {
     margin: 1rem auto;
     padding: 6rem 3rem 2rem;
     
-    border: solid 1px green;
+    border: solid 1px var(--cor-destaque);
 }
 
 .avaliacoes h1 {
